Dirty firefox sidebar scrollbar fix

--- a/discord.user.styl
+++ b/discord.user.styl
@@ -82,6 +82,10 @@
     &-track-piece { colors: 0, $dark, $shadow; }
     &-thumb { colors: 0, $dark, $darker; }
   }
+  // * Dirty firefox sidebar fix
+  .scrollerWrap-2lJEkd {
+    margin-right: -16px;
+  }
 
   // * Loading page
   [class^="app"] > [class^="container"][class*="fixClipping"] { colors: 0, 0, $dark; }
